[package]
name = "decimal64"
version = "0.0.8"
edition = "2024"
license = "MIT"
description = "Fast fixed point arithmetic that only uses u64 as internal representation."
keywords = ["decimal", "fixed", "precision", "number", "low-latency"]
categories = ["finance", "science", "data-structures", "mathematics", "parsing"]
readme = "./README.md"
documentation = "https://docs.rs/decimal64"
repository = "https://github.com/HaveFunTrading/decimal64"
rust-version = "1.85.1"

[features]
default = []
serde = ["dep:serde"]
bincode = ["dep:bincode"]

[dependencies]
thiserror = "2.0.12"
serde = { version = "1.0.217", features = ["derive"],  optional = true }
bincode = { version = "2.0.1",  optional = true }

[dev-dependencies]
anyhow = "1.0.97"
criterion = "0.5.1"
rust_decimal = "1.36.0"
rstest = "0.25.0"
rstest_macros = "0.25.0"
serde_json = "1.0.140"

[[bench]]
name = "parse"
path = "benches/parse.rs"
harness = false

[[bench]]
name = "mul"
path = "benches/mul.rs"
harness = false

[[bench]]
name = "div"
path = "benches/div.rs"
harness = false

[[bench]]
name = "f64"
path = "benches/f64.rs"
harness = false

[[bench]]
name = "math"
path = "benches/math.rs"
harness = false

[[bench]]
name = "rescale"
path = "benches/rescale.rs"
harness = false
